force-app/main/default/objects/Haulier__c/Haulier__c.object-meta.xml
<CustomObject>
    <label>Haulier</label>
    <nameField>
        <label>Haulier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hauliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>