force-app/main/default/objects/Haulier__c/fields/Exclude_from_OTIF__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_OTIF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude this Haulier from OTIF Reporting</description>
    <inlineHelpText>Exclude this Haulier from OTIF Reporting</inlineHelpText>
    <label>Exclude from OTIF</label>
    <type>Checkbox</type>
</CustomField>