force-app/main/default/objects/Haulier__c/fields/Haulier_Account__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to the account</description>
    <inlineHelpText>Haulier Account Record type</inlineHelpText>
    <label>Haulier Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Record Type must be Haulier</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Haulier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hauliers</relationshipLabel>
    <relationshipName>Hauliers</relationshipName>
    <type>Lookup</type>
</CustomField>