force-app/main/default/objects/Haulier__c/fields/Haulier_Code__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Code__c</fullName>
    <description>Identifier of Haulier</description>
    <externalId>true</externalId>
    <label>Haulier Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>