force-app/main/default/objects/Haulier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Haulier_Code__c</columns>
    <columns>Exclude_from_OTIF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>